--- a/style.css
+++ b/style.css
@@ -1,31 +1,96 @@
+/* Bases del codigo */
+
 * {
     margin: 0;
     padding: 0;
 }
-
-.header {
+.flexeo {
     display: flex;
     justify-content: center;
-    background-color: greenyellow;
+    align-items: center;
+}
+.fonts {
+    font-size: 23px;
+    font-family: sans-serif;
+    font-style: none;
+    color: black;
+}
+
+
+
+/* Barra superior de navegacion */
+.header {
+    background-color: #77D353;
+    height: 65px;
 }
 
 .navbar {
-    display: flex;
     justify-content: space-between;
     width: 85%;
 }
 
+/* .left_nav {
+    
+} */
+
+/* .right_nav {
+
+} */
+
 .logo {
-    height: 40px;
-    width: 40px;
+    height: 45px;
+    width: 45px;
+    margin-right: 20px;
 }
 
-.nav_list {
-    display: flex;
+.nav_listL {
+    gap: 20px;
+}
+
+.nav_itemL {
+    list-style: none;
+}
+
+.nav_listR {
     gap: 30px;
 }
 
-.nav_item {
+.nav_itemR {
     list-style: none;
-    font-size: 30px;
+    margin: 8px;
+}
+
+.nav_listR a {
+    text-decoration: none;
+    border-style: solid;
+    border-radius: 8px;
+    border-width: 2px;
+}
+
+.nav_listL a {
+    text-decoration: none;
+}
+
+
+/* Main section */
+.img_fondo {
+    top: 65px;
+    width: 100%;
+    height: 550px;
+    position: absolute;
+}
+
+section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.name {
+    position: relative;
+    z-index: 999;
+    font-size: 100px;
+    color: white;
+    /* left: 35%; */
+    top: 217px;
 }
