--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 .fonts {
     font-size: 23px;
@@ -27,10 +28,13 @@
 .navbar {
     justify-content: space-between;
     width: 85%;
+    
 }
 
-.navbar :hover {
-    color: #77D353;
+
+
+.navbar .flexeo :hover {
+    color: #377b1d;
 }
 
 /* .left_nav {
@@ -97,4 +101,35 @@ section {
     color: white;
     /* left: 35%; */
     top: 217px;
+}
+
+.title {
+    padding: 0;
+    margin: 0;
+    align-items: center;
+}
+
+.products {
+    margin: 10px 0 0 0;
+    padding: 0 10px 30px 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 200px);
+    grid-gap: 20px 40px;
+}
+
+.items {
+    display: grid;
+    position: relative;
+    grid-template-rows: auto 1fr;
+    border-radius: 15px;
+    box-shadow: 0 0 15px #000;
+    transition: .2s ease-in-out;
+}
+
+.items img {
+    position: relative;
+    width: 100%;
+    height: 250px;
+    border-radius: 15px 15px 0 0;
+    cursor: pointer;
 }
