--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ section {
     margin: 10px 0 0 0;
     padding: 0 10px 30px 10px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 200px);
+    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
     grid-gap: 20px 40px;
 }
 
