--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     font-size: 23px;
     font-family: sans-serif;
     font-style: none;
-    color: white;
+    color: white !important; 
 }
 
 
