--- a/style.css
+++ b/style.css
@@ -1,44 +1,50 @@
 /* Bases del codigo */
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .flexeo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fonts {
+  font-family: sans-serif;
+  font-size: 15px;
+  font-style: none;
+  color: black;
 }
 
 /* tipo de letra para el titulo (se cambio porque se veia mejor blanco*/ 
 .font_title {
-    font-size: 23px;
-    font-family: sans-serif;
-    font-style: none;
-    color: white !important; 
+  font-size: 23px;
+  font-family: sans-serif;
+  font-style: none;
+  color: white !important; 
 }
 
 
 /* Barra superior de navegacion */
 .header {
-    background-color: #77D353;
-    height: 65px;
-    color: white; 
+  background-color: #77D353;
+  height: 65px;
+  color: white; 
 }
 
 .navbar {
-    justify-content: space-between;
-    width: 85%;
-    
+  justify-content: space-between;
+  width: 85%;
+  
 }
 
 .navbar .flexeo :hover {
-    color: #377b1d;
+  color: #377b1d;
 }
 
 /* .left_nav {
-    
+  
 } */
 
 /* .right_nav {
@@ -46,93 +52,304 @@
 } */
 
 .logo {
-    height: 45px;
-    width: 45px;
-    margin-right: 20px;
+  height: 45px;
+  width: 45px;
+  margin-right: 20px;
 }
 
 .nav_listL {
-    gap: 20px;
+  gap: 20px;
 }
 
 .nav_itemL {
-    list-style: none;
+  list-style: none;
 }
 
 .nav_listR {
-    gap: 30px;
+  gap: 30px;
 }
 
 .nav_itemR {
-    list-style: none;
-    margin: 8px;
+  list-style: none;
+  margin: 8px;
 }
 
 .nav_listR a {
-    text-decoration: none;
-    border-style: solid;
-    border-radius: 8px;
-    border-width: 2px;
+  text-decoration: none;
+  border-style: solid;
+  border-radius: 8px;
+  border-width: 2px;
 }
 
 .nav_listL a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 
 /* Main section */
 .img_fondo {
-    top: 65px;
-    width: 100%;
-    height: 550px;
-    position: absolute;
+  top: 65px;
+  width: 100%;
+  height: 550px;
+  position: absolute;
 }
 
 section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .name {
-    position: relative;
-    z-index: 999;
-    font-size: 100px;
-    color: white;
-    /* left: 35%; */
-    top: 217px;
+  position: relative;
+  z-index: 999;
+  font-size: 100px;
+  color: white;
+  /* left: 35%; */
+  top: 217px;
 }
 
 .title {
-    padding: 0;
-    margin: 0;
-    align-items: center;
+  padding: 0;
+  margin: 0;
+  align-items: center;
 }
 
 /* Seccion Productos */
 
 .products {
-    justify-content: center;
-    padding: 30px;
-    text-align: center;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,200px);
-    grid-gap: 20px 40px;
+  justify-content: center;
+  padding: 30px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,200px);
+  grid-gap: 20px 40px;
 }
 
 .items {
-    display: grid;
-    position: relative;
-    grid-template-rows: auto 1fr;
-    border-radius: 15px;
-    box-shadow: 0 0 15px #000;
-    transition: .2s ease-in-out;
+  justify-items: center;
+  display: grid;
+  position: relative;
+  grid-template-rows: auto 1fr;
+  border-radius: 15px;
+  box-shadow: 0 0 10px #000;
+  transition: .2s ease-in-out;
 }
 
 .items img {
-    position: relative;
-    width: 100%;
-    height: 250px;
-    border-radius: 15px 15px 0 0;
-    cursor: pointer;
+  position: relative;
+  width: 100%;
+  height: 250px;
+  border-radius: 15px 15px 0 0;
+  cursor: pointer;
+}
+
+.botonCard {
+  cursor: pointer;
+  margin: 8px;
+  width:70%;
+  height: 22px;
+}
+
+/* seccion de hary */
+
+.main_contacto {
+  flex-direction: column;
+}
+
+.titleC {
+  font-size: 60px;
+  font-weight: bold;
+  margin: 200px 0 200px 0;
+  position: relative;
+  z-index: 999;
+  /* top: 200px; */
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.section_forms {
+  width: 100%;
+  margin-top: 150px;
+}
+
+.info_forms {
+  text-align: center;
+  flex-direction: column;
+}
+
+.texto_forms {
+  width: 90%;
+  font-size: 23px;
+}
+.img_forms {
+  padding: 50px;
+  width: 250px;
+  height: 250px;
+}
+
+.forms {
+  width: 50%;
+  height: 500px; 
+}
+
+form {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 5px;
+  /* background-color: #f2f2f2; */
+  background-color: green;
+  padding: 20px;
+}
+
+.input_text {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.text_area {
+  resize: none;
+  height: 100px;
+}
+
+.label {
+  color: whitesmoke;
+  font-size: 25px;
+}
+
+.a_enviar {
+  margin-top: 20px;
+}
+
+.boton_enviar {
+  background-color: #77d353;
+  border-radius: 5px;
+  border: none;
+  border-color: white;
+  color: white;
+  width: 200px;
+  height: 45px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+#message p {
+  color: black;
+  align-items: center;
+  font-size: 20px;
+  line-height: 1.6;
+  color: #000;
+  padding: 80px 60px 0 60px;
+}
+
+.logoimg1 {
+  height: 50px;
+  width: 50px;
+  align-items: center;
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
+
+.info {
+  color: rgb(53, 108, 67);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 20px;
+  display: flex;
+  position: relative;
+  padding-top: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+.info-section {
+  padding: 50px;
+  background-color: #f8f8f8;
+  min-height: 178vh;
+  margin: 0;
+}
+
+.info-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.info-left, .info-right {
+  width: 45%;
+}
+
+h1 {
+  font-size: 30px;
+  margin-bottom: 10px;
+  color: rgb(0, 0, 0);
+}
+
+p {
+  font-size: 20px;
+  line-height: 1.6;
+  margin-bottom: 20px; 
+  color: black;
+}
+.ols {
+  width: 90%; 
+  height: auto; 
+  margin-top: 20px; 
+
+}
+/* Estilos para la imagen */
+.olas {
+  width: 100%; 
+  height: auto; 
+  margin-top: 20px; 
+} 
+footer {
+  margin: auto;
+  
+
+}
+.info-left ola {
+  text-align: center;
+}
+.info-left h1 {
+  text-align: center;
+  
+}
+.info-right h1 {
+  text-align: center;
+
+}
+.info-left {
+  margin-top: 6cm;
+}
+.info-right {
+  margin-top: 14cm;
+}
+.vidbi {
+  text-align: center;
+  margin: 2px;
+  padding: auto;
+  background-color: #f8f8f8;
+  height: auto; 
+}
+
+.vidbi {
+  width: 100%; 
+  max-width: auto; 
+  height: auto; 
+  margin-bottom: 20px;
+  
 }
