--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   font-size: 23px;
   font-family: sans-serif;
   font-style: none;
-  color: white !important; 
+  color: white ; 
 }
 
 
@@ -39,7 +39,11 @@
   
 }
 
-.navbar .flexeo :hover {
+/* .navbar .flexeo :hover {
+  color: #377b1d;
+} */
+
+.hover :hover {
   color: #377b1d;
 }
 
@@ -87,6 +91,37 @@
 
 
 /* Main section */
+
+.imagen_titulo {
+  height: 550px;
+}
+
+.vision {
+  margin-top: 40px;
+  flex-direction: column;
+  align-content: center;
+  align-self: center;
+}
+
+.vision div {
+  width: 80%;
+}
+
+.vision div p{
+  font-size: 20px;
+  padding: 20px ;
+}
+
+.vision div h2{
+  font-size: 30px;
+  padding: auto;
+}
+
+.biodigestor {
+  width: 900px;
+  height: 500px;
+}
+
 .img_fondo {
   top: 65px;
   width: 100%;
@@ -229,6 +264,9 @@ form {
 }
 
 .boton_enviar {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
   background-color: #77d353;
   border-radius: 5px;
   border: none;
@@ -238,6 +276,11 @@ form {
   height: 45px;
   cursor: pointer;
   text-decoration: none;
+}
+
+.texto_enviar {
+  color: white;
+  padding-top: 10px;
 }
 
 #message p {
@@ -352,4 +395,88 @@ footer {
   height: auto; 
   margin-bottom: 20px;
   
+}
+
+ /* Estilos generales para el footer */
+ footer {
+  padding: 20px;
+  background-color: #f4f4f4;
+}
+
+.info-section .info-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.team-section {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.team-container {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-top: 20px;
+}
+
+.team-member {
+  text-align: center;
+}
+
+.team-photo {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.vidbi {
+  margin-top: 20px;
+  text-align: center;
+}
+.team-member p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 15px;
+  
+}
+
+.footer_todos {
+  background-color: #77d353;
+  height: 30px;
+}
+
+.footer_todos p{
+  font-size: 23px;
+  color: #ffffff;
+  font-weight: bold;
+  margin: 0;
+
+}
+
+.footer_todos div {
+  gap: 30%;
+}
+
+.div_imagen {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.popUp {
+  display: flex;
+  height: 300px;
+}
+
+.popUp p {
+  background-color: rgb(186, 255, 199);
+  width:70% ;
+  height: 100px;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 20px;
+  border: 2px solid black;
 }
