--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* Bases del codigo */
-
 * {
   margin: 0;
   padding: 0;
@@ -12,12 +10,11 @@
 
 .fonts {
   font-family: sans-serif;
-  font-size: 15px;
+  font-size: 18px;
   font-style: none;
   color: black;
 }
 
-/* tipo de letra para el titulo (se cambio porque se veia mejor blanco*/ 
 .font_title {
   font-size: 23px;
   font-family: sans-serif;
@@ -31,38 +28,37 @@
   background-color: #77D353;
   height: 65px;
   color: white; 
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10000000;
 }
 
 .navbar {
   justify-content: space-between;
   width: 85%;
-  
 }
-
-/* .navbar .flexeo :hover {
-  color: #377b1d;
-} */
 
 .hover :hover {
   color: #377b1d;
 }
 
-/* .left_nav {
-  
-} */
-
-/* .right_nav {
-
-} */
+.left_nav {
+  gap: 20px;
+}
 
 .logo {
   height: 45px;
   width: 45px;
-  margin-right: 20px;
 }
 
 .nav_listL {
   gap: 20px;
+}
+
+.nav_listL a {
+  text-decoration: none;
 }
 
 .nav_itemL {
@@ -80,59 +76,25 @@
 
 .nav_listR a {
   text-decoration: none;
-  border-style: solid;
+  border: 2px solid white;
   border-radius: 8px;
-  border-width: 2px;
 }
 
-.nav_listL a {
-  text-decoration: none;
-}
-
-
-/* Main section */
+/* Seccion de ivan */
 
 .imagen_titulo {
+  margin-top:65px;
   height: 550px;
 }
 
-.vision {
-  margin-top: 40px;
-  flex-direction: column;
-  align-content: center;
-  align-self: center;
-}
-
-.vision div {
-  width: 80%;
-}
-
-.vision div p{
-  font-size: 20px;
-  padding: 20px ;
-}
-
-.vision div h2{
-  font-size: 30px;
-  padding: auto;
-}
-
-.biodigestor {
-  width: 900px;
-  height: 500px;
+.imagen_titulo section {
+  height: 100%;
 }
 
 .img_fondo {
-  top: 65px;
   width: 100%;
   height: 550px;
   position: absolute;
-}
-
-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .name {
@@ -140,25 +102,70 @@ section {
   z-index: 999;
   font-size: 100px;
   color: white;
-  /* left: 35%; */
-  top: 217px;
 }
 
-.title {
-  padding: 0;
-  margin: 0;
+/* Parte de texto del index */
+
+.vision {
+  margin-top: 50px;
+  flex-direction: column;
+}
+
+.div_imagen {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  width: 80%;
 }
 
-/* Seccion Productos */
+.div_imagen h2 {
+  font-size: 35px;
+  padding: 10px;
+}
+
+.div_imagen p {
+  font-size: 20px;
+  text-align: justify;
+  line-height: 33px;
+}
+
+.biodigestor {
+  margin-top: 30px;
+}
+
+/* Footer que todas las pginas tienen  */
+
+.footer_todos {
+  background-color: #77D353;
+  height: 55px;
+}
+
+.div_footer {
+  width: 80%;
+  justify-content: space-between;
+}
+
+.footer_todos p {
+  font-size:20px;
+  color: white;
+}
+
+.logo_escuela {
+  height: 50px;
+  width: 50px;
+}
+
+/* seccion de productos */
 
 .products {
   justify-content: center;
-  padding: 30px;
+  padding: 0 30px 30px 30px;
   text-align: center;
   display: grid;
   grid-template-columns: repeat(auto-fit,200px);
   grid-gap: 20px 40px;
+  margin-top: 90px;
+  margin-bottom: 500px;
 }
 
 .items {
@@ -186,29 +193,29 @@ section {
   height: 22px;
 }
 
-/* seccion de hary */
+/* seccion de hary  */
 
 .main_contacto {
   flex-direction: column;
 }
 
 .titleC {
+  font-family: sans-serif;
   font-size: 60px;
   font-weight: bold;
-  margin: 200px 0 200px 0;
   position: relative;
   z-index: 999;
-  /* top: 200px; */
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .section_forms {
   width: 100%;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 .info_forms {
+  margin-top: 50px;
   text-align: center;
   flex-direction: column;
 }
@@ -290,6 +297,7 @@ form {
   line-height: 1.6;
   color: #000;
   padding: 80px 60px 0 60px;
+  text-align: center;
 }
 
 .logoimg1 {
@@ -297,7 +305,7 @@ form {
   width: 50px;
   align-items: center;
   margin-right: 10px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .info {
@@ -306,85 +314,65 @@ form {
   font-size: 20px;
   display: flex;
   position: relative;
-  padding-top: 20px;
+  /* padding-top: 20px; */
+}
+
+.logos1 {
+  margin-bottom: 15px;
+}
+
+.message {
+  margin-bottom: 40px;
 }
 
 
+/* seccion de pipe */
 
-
-
-
-
-
-
-
-.info-section {
-  padding: 50px;
-  background-color: #f8f8f8;
-  min-height: 178vh;
-  margin: 0;
-}
+/* .info-section  */
 
 .info-container {
   display: flex;
-  justify-content: space-between;
-  padding: 10px;
+  align-items: flex-start;
+  justify-content: center;
+  width: 90%;
+  gap: 15%;
+  margin-top: 40px;
 }
 
-.info-left, .info-right {
-  width: 45%;
+.imagen {
+  width: 100%;
+  height: 100%;
 }
 
-h1 {
-  font-size: 30px;
-  margin-bottom: 10px;
-  color: rgb(0, 0, 0);
+.info_nosotros {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  align-items: center;
 }
 
-p {
-  font-size: 20px;
-  line-height: 1.6;
-  margin-bottom: 20px; 
-  color: black;
+.info_nosotros h1 {
+  padding: 15px;
+  font-size: 40px;
 }
-.ols {
-  width: 90%; 
-  height: auto; 
-  margin-top: 20px; 
 
+.info_nosotros p {
+  text-align: justify;
+  font-size: 22px;
+  padding: 5px;
+  line-height: 32px;
 }
-/* Estilos para la imagen */
-.olas {
-  width: 100%; 
-  height: auto; 
-  margin-top: 20px; 
-} 
-footer {
-  margin: auto;
-  
 
+.info_nosotros img {
+  margin-top: 30px;
 }
-.info-left ola {
-  text-align: center;
-}
-.info-left h1 {
-  text-align: center;
-  
-}
-.info-right h1 {
-  text-align: center;
 
-}
-.info-left {
-  margin-top: 6cm;
-}
-.info-right {
-  margin-top: 14cm;
-}
+
+
 .vidbi {
   text-align: center;
   margin: 2px;
-  padding: auto;
+  /* padding: auto; */
   background-color: #f8f8f8;
   height: auto; 
 }
@@ -393,15 +381,14 @@ footer {
   width: 100%; 
   max-width: auto; 
   height: auto; 
-  margin-bottom: 20px;
-  
+  padding: 30px 0;
 }
 
  /* Estilos generales para el footer */
- footer {
+ /* footer {
   padding: 20px;
   background-color: #f4f4f4;
-}
+} */
 
 .info-section .info-container {
   display: flex;
@@ -410,7 +397,7 @@ footer {
 
 .team-section {
   text-align: center;
-  margin-top: 40px;
+  padding: 40px 0;
 }
 
 .team-container {
@@ -433,50 +420,14 @@ footer {
 }
 
 .vidbi {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   text-align: center;
 }
 .team-member p {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 15px;
   
-}
+}  
 
-.footer_todos {
-  background-color: #77d353;
-  height: 30px;
-}
 
-.footer_todos p{
-  font-size: 23px;
-  color: #ffffff;
-  font-weight: bold;
-  margin: 0;
 
-}
-
-.footer_todos div {
-  gap: 30%;
-}
-
-.div_imagen {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-.popUp {
-  display: flex;
-  height: 300px;
-}
-
-.popUp p {
-  background-color: rgb(186, 255, 199);
-  width:70% ;
-  height: 100px;
-  font-size: 50px;
-  text-align: center;
-  padding-top: 20px;
-  border: 2px solid black;
-}
