--- a/style.css
+++ b/style.css
@@ -155,6 +155,86 @@
   width: 50px;
 }
 
+/* Inicio de sesion */
+
+.login {
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+
+}
+
+.login_section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  background-color: #a9ff88;
+  height: 400px;
+  width: 350px;
+}
+
+.div_img_logo {
+  margin-bottom: 50px;
+}
+
+.logo_login {
+  height: 100px;
+  width: 100px;
+}
+
+.inputs_form {
+  margin-bottom: 15px;
+}
+
+.login_input {
+  text-align: center;
+  background-color: #ECF0F1;
+  border: 2px solid transparent;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 200;
+  padding: 10px 0;
+  width: 250px;
+  transition: border .5s;
+  }
+
+.login_form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.boton_login {
+  border: 2px solid transparent;
+  background: #3498DB;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 25px;
+  padding: 10px 0;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: 0.25s;
+  display: block;
+  width: 250px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.login_link {
+  font-size: 18px;
+  color: #444;
+  display: block;
+  margin-top: 12px;
+}     
+
+/* seccion de registro */
+
+
+
+
 /* seccion de productos */
 
 .products {
