--- a/style.css
+++ b/style.css
@@ -115,12 +115,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 80%;
+  width: 70%;
 }
 
 .div_imagen h2 {
   font-size: 35px;
   padding: 10px;
+  margin-top: 30px;
 }
 
 .div_imagen p {
@@ -511,3 +512,11 @@ form {
 
 
 
+/* formulario pop up */
+
+.popUp {
+  align-self: center;
+  height: 200px;
+  width: 100%;
+  margin-top: 100px;
+}
